// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poll Component should render a component that polls: basic 1`] = `
<Fragment>
  lorem ipsum
</Fragment>
`;

exports[`Poll Component should render a component that polls: post cache 1`] = `
Object {
  "check": Object {
    "lorem": false,
  },
  "timer": 7,
}
`;

exports[`Poll Component should render a component that polls: pre cache 1`] = `
Object {
  "check": Object {
    "lorem": true,
  },
  "timer": 5,
}
`;
